--- a/.gitignore
+++ b/.gitignore
@@ -10,12 +10,12 @@ screenshots/**
 data/images/**
 data/music/**
 data/sounds/**
-data/world_chunks/**
+data/world_data/**
 
 !data/images/.gitkeep
 !data/music/.gitkeep
 !data/sounds/.gitkeep
-!data/world_chunks/.gitkeep
+!data/world_data/.gitkeep
 
 development/android/.gradle/**
 development/android/assets/**
